# nyumba_blockchain

./: .firebaserc  Cargo.toml  README.md  dfx.json  firebase.json  package-lock.json  package.json
.firebase/: hosting.c3JjL255dW1iYV9mcm9udGVuZC9kaXN0.cache
src/nyumba_backend/: Cargo.toml  nyumba_backend.did
src/nyumba_backend/functions/: shop_traits.rs  user_traits.rs
src/nyumba_backend/src/: lib.rs  test.rs  tokens.rs
src/nyumba_backend/src/contracts/files/: media.rs  property_verification.rs  user_verification.rs  verification.rs
src/nyumba_backend/src/contracts/properties/: land.rs  lease_land.rs  real_estate.rs  rental.rs
src/nyumba_backend/src/contracts/shop/: cart.rs  order.rs
src/nyumba_backend/src/contracts/users/: normal.rs  super_user.rs  user.rs
src/nyumba_backend/src/enums/: file_enums.rs  property_enums.rs  shop_enums.rs  user_enums.rs
src/nyumba_backend/src/functions/: file_traits.rs  property_traits.rs
src/nyumba_backend/src/models/: file_models.rs  property_models.rs  shop_models.rs  user_models.rs
src/nyumba_backend/src/shop/: order.rs
src/nyumba_backend/src/test/: property_test.rs  shop_test.rs  test.rs
src/nyumba_backend/src/users/: admin.rs  buyer.rs  govt.rs  seller.rs  user.rs
src/nyumba_backend/src/users/normal/: buyer.rs  normal.rs  seller.rs
src/nyumba_backend/src/users/super/: admin.rs  official.rs  super.rs
src/nyumba_backend/test/: file_test.rs  test.rs  user_test.rs
src/nyumba_frontend/: index.html
src/nyumba_frontend/src/: App.jsx  main.jsx
src/nyumba_frontend/src/context/: auth.context.tsx
(+107 files in other folders)
