[package]
name = "nyumba_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
reqwest = "0.11.0"
candid = "0.10" 
ic-cdk = "0.12"
ic-cdk-timers = "0.6" 
# pocket-ic = "2.2.0"
ic-cdk-macros = "0.8"