[package]
name = "nyumba_backend"
version = "0.1.0"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = "0.13.1"
# Only necessary if you want to define Candid data types
candid = "0.10" 
# candid = "0.9.9"
# ic-cdk = "0.11.3"
ic-cdk-timers = "0.1" # Feel free to remove this dependency if you don't need timers
serde = "1.0"
serde_derive = "1.0"